# services-template

./: .env.dev  .gitignore  README.md  _unused_pyrightconfig.json  dev.code-workspace  docker-compose.yaml  dockerfile  pyproject.toml  pyrightconfig.json
.github/actions/setup/: action.yaml
.github/actions/setup-uv/: action.yaml
.github/workflows/: code-quality.yaml
api-service/: dockerfile  main.py  pyproject.toml
api-service/api/middlewares/: logging_mw.py
api-service/api/routers/: users.py
api-service/routers/: users.py
common/: pyproject.toml
common-lib/: pyproject.toml
common-lib/common_lib/: greet.py  loggingfw.py
common/common/models/events/: base_event.py  mail_triggered.py
common/common/utilities/: logging_fw.py
common/src/common/config/: base_config.py
common/src/common/events/: base_event.py  mail_triggered.py  user_reponse_event.py  user_request_event.py
common/src/common/logging/: correlation_id.py  default_config.json  logging_fw.py  logging_setup.py  otel_handler.py  otel_logger.py
common/src/common/models/events/: base_event.py  mail_triggered.py
common/src/common/rabbitmq/: base_consumer.py  connection.py  handler.py  rabbitmq.py  rabbitmq_exceptions.py  rabbitmq_setup.py  rpc_base_consumer.py  rpc_handler.py
common/src/common/utilities/: base_consumer.py  correlation_id.py  correlation_id_context.py  logging_fw.py  rabbitmq.py
common/utilities/: logging_fw.py
consumer-service/: dockerfile  main.py  pyproject.toml
consumer-service/consumers/: mail_triggered_event_consumer.py  rpc_get_user_event.consumer.py  rpc_get_user_event_consumer.py
example-service/: pyproject.toml
example-service/example_service/: main.py
first-service/: dockerfile  main.py  pyproject.toml
first-service/first_service/: main.py
infrastructure/: docker-compose.yaml
infrastructure/api-service/: Dockerfile  compose.yaml
infrastructure/consumer-service/: Dockerfile  compose.yaml
infrastructure/logging/: Dockerfile.loki  Dockerfile.otel  compose.yaml
infrastructure/rabbitmq/: compose.yaml
second-service/: dockerfile  main.py  pyproject.toml
second-service/second_service/: main.py
services/service-a/: docker-compose.yml  loggingfw.py  main.py  pyproject.toml
services/service-b/: pyproject.toml
services/service-b/service_b/: __init__.py
