[project]
name = "services-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["common", "api-service", "consumer-service", "common2"]

[dependency-groups]
dev = ["pyright>=1.1.402", "ruff>=0.11.13"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["common/src"] # required to resolve common dependency
