[project]
name = "api-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "common",
    "fastapi[standard]>=0.115.12",
]

[tool.uv.sources]
common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.13",
]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "../common/src" # required to resolve common dependency
