[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "opentelemetry-exporter-otlp (>=1.33.1,<2.0.0)",
    "opentelemetry-distro (>=0.54b1,<0.55)"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.13",
]
