[project]
name = "first-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "common",
    "flask (>=3.1.1,<4.0.0)",
]

[tool.uv.sources]
common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.13",
]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
stubPath = "../common/src" # required to resolve common dependency
