[project]
name = "second-service"
version = "0.1.0"
description = ""

requires-python = ">=3.13"
dependencies = [
"flask (>=3.1.1,<4.0.0)",
"common-lib",
]

[tool.poetry.dependencies]
common-lib = {path = '../common-lib'}

[project.scripts]
start = "second_service.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
