[project]
name = "service-b"
version = "0.1.0"
description = ""
authors = [
{name = "Tim Elsener",email = "tim.elsener@ecologic.ch"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "opentelemetry-distro (>=0.54b1,<0.55)",
    "opentelemetry-exporter-otlp (>=1.33.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
